syntax = "proto3";

option java_multiple_files = true;
package communication;

service UserService{
  rpc incPenalties(LongId) returns (EmptyMessage);
}

message LongId{
  uint64 id = 1;
}
message EmptyMessage {
}